Initialize AMR branch

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -43,4 +43,5 @@ add_subdirectory(LidDriven)
 add_subdirectory(FTCS)
 add_subdirectory(CONV1D)
 add_subdirectory(EqnHandler)
+add_subdirectory(AMR)
 add_subdirectory(FTCS2D)
