--- a/examples/CONV1D/CMakeLists.txt
+++ b/examples/CONV1D/CMakeLists.txt
@@ -1,5 +1,10 @@
 cmake_minimum_required(VERSION 3.10)
 project(OpFlow_Cases_CONV1D)
 
-add_executable(CONV1D CONV1D.cpp)
-target_link_libraries(CONV1D ${OpFlow_Libs})
+if (NOT TARGET opflow)
+    find_package(opflow REQUIRED)
+endif ()
+
+add_executable(CONV1D EXCLUDE_FROM_ALL CONV1D.cpp)
+target_link_libraries(CONV1D opflow::opflow)
+target_compile_options(CONV1D PRIVATE ${OPFLOW_EXAMPLE_FLAGS})
