--- a/examples/EqnHandler/CMakeLists.txt
+++ b/examples/EqnHandler/CMakeLists.txt
@@ -1,5 +1,10 @@
 cmake_minimum_required(VERSION 3.10)
 project(OpFlow_Cases_EqnHandler)
 
-add_executable(EqnHandler EqnHandler.cpp)
-target_link_libraries(EqnHandler ${OpFlow_Libs})
+if (NOT TARGET opflow)
+    find_package(opflow REQUIRED)
+endif ()
+
+add_executable(EqnHandler EXCLUDE_FROM_ALL EqnHandler.cpp)
+target_link_libraries(EqnHandler opflow::opflow)
+target_compile_options(EqnHandler PRIVATE ${OPFLOW_EXAMPLE_FLAGS})
