--- a/examples/FTCS/CMakeLists.txt
+++ b/examples/FTCS/CMakeLists.txt
@@ -1,7 +1,11 @@
 cmake_minimum_required(VERSION 3.10)
 project(OpFlow_Cases_FTCS)
 
-add_executable(FTCS FTCS.cpp)
-target_link_libraries(FTCS ${OpFlow_Libs})
+if (NOT TARGET opflow)
+    find_package(opflow REQUIRED)
+endif ()
 
-set_target_properties(FTCS PROPERTIES COMPILE_FLAGS "-save-temps")
+add_executable(FTCS EXCLUDE_FROM_ALL FTCS.cpp)
+target_link_libraries(FTCS opflow::opflow)
+target_compile_options(FTCS PRIVATE ${OPFLOW_EXAMPLE_FLAGS})
+target_compile_options(FTCS PRIVATE "-save-temps")
