--- a/cmake/DownloadHYPRE.txt.in
+++ b/cmake/DownloadHYPRE.txt.in
@@ -1,14 +1,31 @@
+# ----------------------------------------------------------------------------
+#
+# Copyright (c) 2019 - 2021 by the OpFlow developers
+#
+# This file is part of OpFlow.
+#
+# OpFlow is free software and is distributed under the MPL v2.0 license.
+# The full text of the license can be found in the file LICENSE at the top
+# level directory of OpFlow.
+#
+# ----------------------------------------------------------------------------
+#
+# Template cmake config file for HYPRE's private build (download version)
+#
+# ----------------------------------------------------------------------------
+
 cmake_minimum_required(VERSION 3.10)
 
 project(hypre-download NONE)
 
 include(ExternalProject)
-ExternalProject_Add(hypre
-  GIT_REPOSITORY    https://gitee.com/luohaothu/hypre.git
-  GIT_TAG           master
-  SOURCE_DIR        "${CMAKE_CURRENT_BINARY_DIR}/hypre-src"
-  BINARY_DIR        "${CMAKE_CURRENT_BINARY_DIR}/hypre-build"
-  SOURCE_SUBDIR     "./src"
-  CMAKE_ARGS        -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER} -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER} -DHYPRE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DHYPRE_ENABLE_SINGLE=${OpFlow_single_precision} -DHYPRE_WITH_OPENMP=${OpFlow_with_openmp} -DHYPRE_INSTALL_PREFIX=${CMAKE_CURRENT_BINARY_DIR}/hypre
-  TEST_COMMAND      ""
-)
+ExternalProject_Add(_hypre_download
+        GIT_REPOSITORY  https://gitee.com/luohaothu/hypre.git
+        GIT_TAG         master
+        SOURCE_DIR      "${CMAKE_CURRENT_BINARY_DIR}/hypre_src"
+        BINARY_DIR      "${CMAKE_CURRENT_BINARY_DIR}/hypre_build"
+        INSTALL_DIR     "${CMAKE_CURRENT_BINARY_DIR}/hypre"
+        SOURCE_SUBDIR   "./src"
+        CMAKE_ARGS      ${HYPRE_OPTIONS}
+        TEST_COMMAND    ""
+        )
