--- a/cmake/DownloadVTK.txt.in
+++ b/cmake/DownloadVTK.txt.in
@@ -1,13 +1,30 @@
+# ----------------------------------------------------------------------------
+#
+# Copyright (c) 2019 - 2021 by the OpFlow developers
+#
+# This file is part of OpFlow.
+#
+# OpFlow is free software and is distributed under the MPL v2.0 license.
+# The full text of the license can be found in the file LICENSE at the top
+# level directory of OpFlow.
+#
+# ----------------------------------------------------------------------------
+#
+# Template cmake config file for VTK's private build (download version)
+#
+# ----------------------------------------------------------------------------
+
 cmake_minimum_required(VERSION 3.10)
 
 project(vtk-download NONE)
 
 include(ExternalProject)
-ExternalProject_Add(vtk
+ExternalProject_Add(_vtk_download
   GIT_REPOSITORY    https://gitee.com/luohaothu/vtk.git
   GIT_TAG           master
-  SOURCE_DIR        "${CMAKE_CURRENT_BINARY_DIR}/vtk-src"
-  BINARY_DIR        "${CMAKE_CURRENT_BINARY_DIR}/vtk-build"
-  CMAKE_ARGS        -DBUILD_SHARED_LIBS=OFF -DCMAKE_INSTALL_PREFIX=${CMAKE_CURRENT_BINARY_DIR}/vtk
+  SOURCE_DIR        "${CMAKE_CURRENT_BINARY_DIR}/vtk_src"
+  BINARY_DIR        "${CMAKE_CURRENT_BINARY_DIR}/vtk_build"
+  INSTALL_DIR       "${CMAKE_CURRENT_BINARY_DIR}/vtk"
+  CMAKE_ARGS        ${VTK_OPTIONS}
   TEST_COMMAND      ""
 )
