--- a/cmake/UseExistingHYPRE.cmake.in
+++ b/cmake/UseExistingHYPRE.cmake.in
@@ -10,22 +10,20 @@
 #
 # ----------------------------------------------------------------------------
 #
-# Template cmake config file for GTest's build & config
+# Template cmake config file for HYPRE's private build (pre-downloaded version)
 #
 # ----------------------------------------------------------------------------
 
-cmake_minimum_required(VERSION 2.8.2)
+cmake_minimum_required(VERSION 3.10)
 
-project(googletest-download NONE)
+project(hypre-acquire NONE)
 
 include(ExternalProject)
-ExternalProject_Add(googletest
-  GIT_REPOSITORY    https://github.com/google/googletest.git
-  GIT_TAG           master
-  SOURCE_DIR        "${CMAKE_CURRENT_BINARY_DIR}/googletest-src"
-  BINARY_DIR        "${CMAKE_CURRENT_BINARY_DIR}/googletest-build"
-  CONFIGURE_COMMAND ""
-  BUILD_COMMAND     ""
-  INSTALL_COMMAND   ""
-  TEST_COMMAND      ""
-)
+ExternalProject_Add(_hypre_build
+        SOURCE_DIR        ${OPFLOW_HYPRE_SOURCE_DIR}
+        BINARY_DIR        "${CMAKE_CURRENT_BINARY_DIR}/hypre_build"
+        INSTALL_DIR       "${CMAKE_CURRENT_BINARY_DIR}/hypre"
+        SOURCE_SUBDIR     "./src"
+        CMAKE_ARGS        ${HYPRE_OPTIONS}
+        TEST_COMMAND      ""
+        )
