--- a/cmake/UseExistingVTK.cmake.in
+++ b/cmake/UseExistingVTK.cmake.in
@@ -10,22 +10,19 @@
 #
 # ----------------------------------------------------------------------------
 #
-# Template cmake config file for GTest's build & config
+# Template config file for VTK's private build (pre-downloaded version)
 #
 # ----------------------------------------------------------------------------
 
-cmake_minimum_required(VERSION 2.8.2)
+cmake_minimum_required(VERSION 3.10)
 
-project(googletest-download NONE)
+project(vtk-acquire NONE)
 
 include(ExternalProject)
-ExternalProject_Add(googletest
-  GIT_REPOSITORY    https://github.com/google/googletest.git
-  GIT_TAG           master
-  SOURCE_DIR        "${CMAKE_CURRENT_BINARY_DIR}/googletest-src"
-  BINARY_DIR        "${CMAKE_CURRENT_BINARY_DIR}/googletest-build"
-  CONFIGURE_COMMAND ""
-  BUILD_COMMAND     ""
-  INSTALL_COMMAND   ""
-  TEST_COMMAND      ""
-)
+ExternalProject_Add(_vtk_build
+        SOURCE_DIR        ${OPFLOW_VTK_SOURCE_DIR}
+        BINARY_DIR        "${CMAKE_CURRENT_BINARY_DIR}/vtk_build"
+        INSTALL_DIR       "${CMAKE_CURRENT_BINARY_DIR}/vtk"
+        CMAKE_ARGS        ${VTK_OPTIONS}
+        TEST_COMMAND      ""
+        )
