Add FixedSizeTensor for later use

--- a/examples/LevelSet/CMakeLists.txt
+++ b/examples/LevelSet/CMakeLists.txt
@@ -7,4 +7,7 @@ endif ()
 
 add_executable(LevelSet EXCLUDE_FROM_ALL LevelSet.cpp AMRLS.cpp UniLS.cpp)
 target_link_libraries(LevelSet opflow::opflow)
+if (APPLE)
+    target_link_libraries(LevelSet c++)
+endif ()
 target_compile_options(LevelSet PRIVATE ${OPFLOW_EXAMPLE_FLAGS})
