Fix RelDbg build flags

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -11,8 +11,7 @@ if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
              -Wno-narrowing -ftemplate-backtrace-limit=0")
     string(APPEND OPFLOW_EXAMPLE_CXX_FLAGS_DEBUG "${OPFLOW_EXAMPLE_CXX_FLAGS} -g -O0")
     string(APPEND OPFLOW_EXAMPLE_CXX_FLAGS_RELEASE "${OPFLOW_EXAMPLE_CXX_FLAGS} -O3 -fopenmp-simd -DNDEBUG")
-    string(APPEND OPFLOW_EXAMPLE_CXX_FLAGS_RELWITHDEBINFO " -g")
-    string(APPEND OPFLOW_EXAMPLE_CXX_FLAGS_RELWITHDEBINFO "${OPFLOW_EXAMPLE_CXX_FLAGS_RELEASE}")
+    string(APPEND OPFLOW_EXAMPLE_CXX_FLAGS_RELWITHDEBINFO "${OPFLOW_EXAMPLE_CXX_FLAGS_RELEASE} -g")
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "Intel")
     message(FATAL_ERROR "Intel compiler doesn't support C++20 standard.")
 elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
