--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -34,3 +34,4 @@ add_subdirectory(LidDriven)
 add_subdirectory(FTCS)
 add_subdirectory(CONV1D)
 add_subdirectory(EqnHandler)
+add_subdirectory(FTCS2D)
