--- a/test/Utils/CMakeLists.txt
+++ b/test/Utils/CMakeLists.txt
@@ -11,3 +11,5 @@
 # ----------------------------------------------------------------------------
 
 project(OpFlow_Utils_Tests)
+
+add_gmock(HDF5StreamTest ${CMAKE_CURRENT_LIST_DIR}/HDF5StreamTest.cpp)
