Complete LogicalBC's impl

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,6 +26,7 @@ function(add_gmock testname testfile)
     add_executable(${testname} EXCLUDE_FROM_ALL ${testfile} ${ARGN})
     target_link_libraries(${testname} gmock_main opflow::opflow gcov)
     target_compile_options(${testname} PRIVATE "$<$<CXX_COMPILER_ID:GNU>:--coverage>"
+            PRIVATE "$<$<CXX_COMPILER_ID:GNU>:-fconcepts-diagnostics-depth=5>"
             PRIVATE "$<$<CXX_COMPILER_ID:Clang>:-fprofile-instr-generate -fcoverage-mapping>")
     set_property(GLOBAL APPEND PROPERTY all_test_srcs ${testfile} ${ARGN})
     if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
