Add flags for google benchmark

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -356,6 +356,9 @@ endif ()
 if (OPFLOW_BUILD_BENCHMARKS OR OPFLOW_BUILD_ALL)
     message(STATUS "Generating benchmarks")
     # config google benchmark as part of the project
+    set(BENCHMARK_ENABLE_INSTALL OFF)
+    set(BENCHMARK_ENABLE_TESTING OFF)
+    set(BENCHMARK_ENABLE_GTEST_TESTS OFF)
     add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/external/benchmark)
     add_subdirectory(benchmark)
 endif ()
