--- a/examples/FTCS2D/CMakeLists.txt
+++ b/examples/FTCS2D/CMakeLists.txt
@@ -5,13 +5,8 @@ if (NOT TARGET opflow)
     find_package(opflow REQUIRED)
 endif ()
 
-add_executable(FTCS-OMP EXCLUDE_FROM_ALL FTCS-OMP.cpp)
-target_link_libraries(FTCS-OMP opflow::opflow)
-target_compile_options(FTCS-OMP PRIVATE ${OPFLOW_EXAMPLE_FLAGS})
+add_example(FTCS-OMP FTCS-OMP.cpp)
 target_compile_definitions(FTCS-OMP PRIVATE OPFLOW_THREAD_MODEL_OPENMP)
 
-
-add_executable(FTCS-MPI EXCLUDE_FROM_ALL FTCS-MPI.cpp)
-target_link_libraries(FTCS-MPI opflow::opflow)
-target_compile_options(FTCS-MPI PRIVATE ${OPFLOW_EXAMPLE_FLAGS})
+add_example(FTCS-MPI FTCS-MPI.cpp)
 target_compile_definitions(FTCS-MPI PRIVATE OPFLOW_DISTRIBUTE_MODEL_MPI)
