--- a/examples/LidDriven/CMakeLists.txt
+++ b/examples/LidDriven/CMakeLists.txt
@@ -5,15 +5,9 @@ if (NOT TARGET opflow)
     find_package(opflow REQUIRED)
 endif ()
 
-add_executable(LidDriven2D EXCLUDE_FROM_ALL LidDriven2D.cpp)
-target_link_libraries(LidDriven2D PRIVATE opflow::opflow)
-target_compile_options(LidDriven2D PRIVATE ${OPFLOW_EXAMPLE_FLAGS})
+add_example(LidDriven2D LidDriven2D.cpp)
 
-add_executable(LidDriven3D EXCLUDE_FROM_ALL LidDriven3D.cpp)
-target_link_libraries(LidDriven3D PRIVATE opflow::opflow)
-target_compile_options(LidDriven3D PRIVATE ${OPFLOW_EXAMPLE_FLAGS})
+add_example(LidDriven3D LidDriven3D.cpp)
 
-add_executable(LidDriven2D-MPI EXCLUDE_FROM_ALL LidDriven2D-MPI.cpp)
-target_link_libraries(LidDriven2D-MPI opflow::opflow)
-target_compile_options(LidDriven2D-MPI PRIVATE ${OPFLOW_EXAMPLE_FLAGS})
+add_example(LidDriven2D-MPI LidDriven2D-MPI.cpp)
 target_compile_definitions(LidDriven2D-MPI PRIVATE OPFLOW_DISTRIBUTE_MODEL_MPI)
