--- a/examples/CONV1D/CMakeLists.txt
+++ b/examples/CONV1D/CMakeLists.txt
@@ -5,6 +5,4 @@ if (NOT TARGET opflow)
     find_package(opflow REQUIRED)
 endif ()
 
-add_executable(CONV1D EXCLUDE_FROM_ALL CONV1D.cpp)
-target_link_libraries(CONV1D opflow::opflow)
-target_compile_options(CONV1D PRIVATE ${OPFLOW_EXAMPLE_FLAGS})
+add_example(CONV1D CONV1D.cpp)
