--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -22,6 +22,8 @@ include(${CMAKE_CURRENT_LIST_DIR}/../cmake/CodeCoverage.cmake)
 #define_property(GLOBAL PROPERTY all_test_srcs)
 set_property(GLOBAL PROPERTY all_test_srcs)
 
+add_custom_target(AllTests)
+
 function(add_gmock testname testfile)
     add_executable(${testname} EXCLUDE_FROM_ALL ${testfile} ${ARGN})
     target_link_libraries(${testname} gmock_main opflow::opflow gcov)
@@ -29,6 +31,10 @@ function(add_gmock testname testfile)
             PRIVATE "$<$<CXX_COMPILER_ID:GNU>:-fconcepts-diagnostics-depth=5>"
             PRIVATE "$<$<CXX_COMPILER_ID:Clang>:-fprofile-instr-generate -fcoverage-mapping>")
     set_property(GLOBAL APPEND PROPERTY all_test_srcs ${testfile} ${ARGN})
+    add_dependencies(AllTests ${testname})
+    if (NOT ${testname} STREQUAL "UniTests")
+        add_test(NAME ${testname} COMMAND ${CMAKE_CURRENT_BINARY_DIR}/${testname})
+    endif ()
     if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
         SETUP_TARGET_FOR_COVERAGE(${testname}_coverage ${testname} ${testname}_coverage)
     endif ()
@@ -77,4 +83,4 @@ add_subdirectory(Utils)
 # Add global tests target
 get_property(all_test_srcs_list GLOBAL PROPERTY all_test_srcs)
 list(REMOVE_DUPLICATES all_test_srcs_list)
-add_gmock(AllTests ${all_test_srcs_list})
+add_gmock(UniTests ${all_test_srcs_list})
