--- a/cmake/DownloadHYPRE.txt.in
+++ b/cmake/DownloadHYPRE.txt.in
@@ -20,8 +20,8 @@ project(hypre-download NONE)
 
 include(ExternalProject)
 ExternalProject_Add(_hypre_download
-        GIT_REPOSITORY  https://gitee.com/luohaothu/hypre.git
-        GIT_TAG         master
+        GIT_REPOSITORY  https://github.com/hypre-space/hypre.git
+        GIT_TAG         v2.22.1
         SOURCE_DIR      "${CMAKE_CURRENT_BINARY_DIR}/hypre_src"
         BINARY_DIR      "${CMAKE_CURRENT_BINARY_DIR}/hypre_build"
         INSTALL_DIR     "${CMAKE_CURRENT_BINARY_DIR}/hypre"
