--- a/cmake/DownloadVTK.txt.in
+++ b/cmake/DownloadVTK.txt.in
@@ -20,8 +20,8 @@ project(vtk-download NONE)
 
 include(ExternalProject)
 ExternalProject_Add(_vtk_download
-  GIT_REPOSITORY    https://gitee.com/luohaothu/vtk.git
-  GIT_TAG           master
+  GIT_REPOSITORY    https://github.com/Kitware/VTK.git
+  GIT_TAG           v9.0.3
   SOURCE_DIR        "${CMAKE_CURRENT_BINARY_DIR}/vtk_src"
   BINARY_DIR        "${CMAKE_CURRENT_BINARY_DIR}/vtk_build"
   INSTALL_DIR       "${CMAKE_CURRENT_BINARY_DIR}/vtk"
