--- a/test/DataStructures/CMakeLists.txt
+++ b/test/DataStructures/CMakeLists.txt
@@ -14,3 +14,6 @@ project(OpFlow_DS_Tests)
 
 # MDArray
 add_gmock(PlainTensorTest ${CMAKE_CURRENT_SOURCE_DIR}/Arrays/PlainTensorTest.cpp)
+
+# MDIndex
+add_gmock(MDIndexTest ${CMAKE_CURRENT_SOURCE_DIR}/Index/MDIndexTest.cpp)
