--- a/examples/LevelSet/CMakeLists.txt
+++ b/examples/LevelSet/CMakeLists.txt
@@ -5,9 +5,7 @@ if (NOT TARGET opflow)
     find_package(opflow REQUIRED)
 endif ()
 
-add_executable(LevelSet EXCLUDE_FROM_ALL LevelSet.cpp AMRLS.cpp UniLS.cpp)
-target_link_libraries(LevelSet opflow::opflow)
+add_example(LevelSet LevelSet.cpp AMRLS.cpp UniLS.cpp)
 if (APPLE)
     target_link_libraries(LevelSet c++)
 endif ()
-target_compile_options(LevelSet PRIVATE ${OPFLOW_EXAMPLE_FLAGS})
