--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -1,4 +1,4 @@
-name: OpFlow Build
+name: BuildAndTest
 
 on:
   push:
@@ -44,22 +44,22 @@ jobs:
             artifact_name: "Linux",
             cores: 2,
           }
-#          - {
-#            name: "MacOSX/10.15/Static/X64/Release",
-#            os: macos-10.15,
-#            config: Release,
-#            sudocmd: "sudo",
-#            artifact_name: "MacOSX",
-#            cores: 3,
-#          }
-#          - {
-#            name: "MacOSX/10.15/Static/X64/Debug",
-#            os: macos-10.15,
-#            config: Debug,
-#            sudocmd: "sudo",
-#            artifact_name: "MacOSX",
-#            cores: 3,
-#          }
+          - {
+            name: "MacOSX/10.15/Static/X64/Release",
+            os: macos-10.15,
+            config: Release,
+            sudocmd: "sudo",
+            artifact_name: "MacOSX",
+            cores: 3,
+          }
+          - {
+            name: "MacOSX/10.15/Static/X64/Debug",
+            os: macos-10.15,
+            config: Debug,
+            sudocmd: "sudo",
+            artifact_name: "MacOSX",
+            cores: 3,
+          }
     if: "!contains(github.event.head_commit.message, 'skip build')"
     steps:
       - name: Checkout
