--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -24,9 +24,11 @@ set_property(GLOBAL PROPERTY all_test_srcs)
 
 add_custom_target(AllTests)
 
+set(TEST_MAIN_CPP ${CMAKE_CURRENT_LIST_DIR}/test_main.cpp)
+
 function(add_gmock testname testfile)
-    add_executable(${testname} EXCLUDE_FROM_ALL ${testfile} ${ARGN})
-    target_link_libraries(${testname} gmock_main opflow::opflow gcov)
+    add_executable(${testname} EXCLUDE_FROM_ALL ${testfile} ${ARGN} ${TEST_MAIN_CPP})
+    target_link_libraries(${testname} gmock opflow::opflow gcov)
     target_compile_options(${testname} PRIVATE "$<$<CXX_COMPILER_ID:GNU>:--coverage>"
             PRIVATE "$<$<CXX_COMPILER_ID:GNU>:-fconcepts-diagnostics-depth=5>"
             PRIVATE "$<$<CXX_COMPILER_ID:Clang>:-fprofile-instr-generate -fcoverage-mapping>")
