[Core] [Test] Add ConvTest; Fix kernel range error

--- a/test/Core/CMakeLists.txt
+++ b/test/Core/CMakeLists.txt
@@ -21,8 +21,9 @@ add_gmock(CartesianMeshTest ${CMAKE_CURRENT_LIST_DIR}/Mesh/CartesianMeshTest.cpp
 # Fields
 add_gmock(CartesianFieldBuilderTest ${CMAKE_CURRENT_LIST_DIR}/Field/CartesianFieldBuilderTest.cpp)
 
-# Interpolators
+# Operators
 add_gmock(InterpolatorTest ${CMAKE_CURRENT_LIST_DIR}/Operator/InterpolatorTest.cpp)
+add_gmock(ConvolutionTest ${CMAKE_CURRENT_LIST_DIR}/Operator/ConvolutionTest.cpp)
 
 # RangeFor
 add_gmock(RangeForTest ${CMAKE_CURRENT_LIST_DIR}/Loops/RangeForTest.cpp)
