--- a/examples/EqnHandler/CMakeLists.txt
+++ b/examples/EqnHandler/CMakeLists.txt
@@ -9,3 +9,8 @@ add_example(EqnHandler EqnHandler.cpp)
 
 add_example(EqnHandler-MPI EqnHandler-MPI.cpp)
 target_compile_definitions(EqnHandler-MPI PRIVATE OPFLOW_DISTRIBUTE_MODEL_MPI)
+
+add_example(EqnHandlerAMGCL EqnHandlerAMGCL.cpp)
+
+add_example(EqnHandlerAMGCL-MPI EqnHandlerAMGCL-MPI.cpp)
+target_compile_definitions(EqnHandlerAMGCL-MPI PRIVATE OPFLOW_DISTRIBUTE_MODEL_MPI)
