--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -71,9 +71,9 @@ jobs:
         run: |
           brew install gcc@11 doxygen
           if [ "$RUNNER_OS" == "Linux" ]; then
-               sudo apt install -y libopenmpi-dev libhdf5-mpi-dev libhdf5-dev python3-pip python3-sphinx lcov
+               sudo apt install -y libopenmpi-dev libhdf5-mpi-dev libhdf5-dev python3-pip python3-sphinx lcov libboost-dev
           elif [ "$RUNNER_OS" == "macOS" ]; then
-               brew install open-mpi hdf5-mpi sphinx lcov
+               brew install open-mpi hdf5-mpi sphinx lcov boost
           else
                echo "$RUNNER_OS not supported"
                exit 1
