[Core] Add TG example

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -44,6 +44,7 @@ add_subdirectory(FTCS)
 add_subdirectory(CONV1D)
 add_subdirectory(EqnHandler)
 add_subdirectory(FTCS2D)
+add_subdirectory(TaylorGreen)
 # AMR Cases
 add_subdirectory(AMR)
 add_subdirectory(LevelSet)
